package src.Controller;

import src.Plateau;
import src.View.Panel;

public class Controller {

    public Controller(Plateau plateau, Panel view) {

    }
    
}
