package src.View;

public class View {
    
}
